--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,9 @@ dependencies {
     compile 'org.projectlombok:lombok:1.18.2'
 
     // Use JUnit test framework
-    testImplementation 'junit:junit:4.12'
+    testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
+    testCompile('org.junit.jupiter:junit-jupiter-params:5.2.0')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
 }
 
 application {
