--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,13 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:27.1-jre'
 
-    compile 'org.projectlombok:lombok:1.18.2'
+    compileOnly 'org.projectlombok:lombok:1.18.2'
+    annotationProcessor 'org.projectlombok:lombok:1.18.2'
+    implementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
+
+    // test
+    testCompileOnly 'org.projectlombok:lombok:1.18.2'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
 
     // Use JUnit test framework
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
