--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     // test
     testCompileOnly 'org.projectlombok:lombok:1.18.2'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
+    testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 
     // Use JUnit test framework
     testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
@@ -41,4 +42,8 @@ dependencies {
 application {
     // Define the main class for the application
     mainClassName = 'com.hyein.algorithm.App'
+}
+
+test {
+    useJUnitPlatform()
 }
